--- a/resources/view/invoices.index.html.twig
+++ b/resources/view/invoices.index.html.twig
@@ -7,6 +7,9 @@
 {% endblock %}
 
 {% block body %}
+    <div>
+    Esta tabela retorna as <strong>transações de um mês</strong> específico. Para trocar o mês, altere o <strong>ano-mes</strong> na URL desta página.
+    </div>
     <table id="example"></table>
     <script>
     $(document).ready( function () {
