--- a/resources/view/invoices.index.html.twig
+++ b/resources/view/invoices.index.html.twig
@@ -1,42 +1,8 @@
 {% extends "index.html.twig" %}
 
-{% block head %}
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
-    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
-{% endblock %}
-
 {% block body %}
     <div>
     Esta tabela retorna as <strong>transações de um mês</strong> específico. Para trocar o mês, altere o <strong>ano-mes</strong> na URL desta página.
     </div>
-    <table id="example"></table>
-    <script>
-    $(document).ready( function () {
-        function format(string) {
-            string = string.charAt(0).toUpperCase() + string.slice(1);
-            string = string.replace(/_/g, ' ')
-            return string
-        }
-        $.ajax({
-            url: '{{ url|raw }}',
-            success: function (data) {
-                var columns = [];
-                columnNames = Object.keys(data.data[0]);
-                for (var i in columnNames) {
-                    if (['metadata'].indexOf(columnNames[i]) != -1) {
-                        continue
-                    }
-                    columns.push({data: columnNames[i],
-                    title: format(columnNames[i])});
-                }
-                var table = $('#example').DataTable({
-                    scrollX: true,
-                    data:    data.data,
-                    columns: columns,
-                });
-            }
-        });
-    })
-    </script>
+    {{ include('components/datatable.html.twig') }}
 {% endblock %}
