--- a/resources/view/components/datatable.html.twig
+++ b/resources/view/components/datatable.html.twig
@@ -35,7 +35,10 @@
                     data:    data.data,
                     columns: columns,
                 });
-            }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                $('#example').html(xhr.responseText);
+            },
         });
     })
     </script>
