Criação de pasta para layouts
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/categorias.index.html.twig
+++ b/resources/view/categorias.index.html.twig
@@ -1,5 +1,5 @@
-{% extends "index.html.twig" %}
+{% extends "index/index.html.twig" %}
 
 {% block body %}
-    {{ include('components/datatable.html.twig') }}
+    {{ include('layout/components/datatable\.html.twig') }}
 {% endblock %}
