--- a/resources/view/calculos.index.html.twig
+++ b/resources/view/calculos.index.html.twig
@@ -1,4 +1,4 @@
-{% extends "index.html.twig" %}
+{% extends "index/index.html.twig" %}
 
 {% block head %}
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.7.0.js"></script>
