--- a/resources/view/invoices.index.html.twig
+++ b/resources/view/invoices.index.html.twig
@@ -1,8 +1,8 @@
-{% extends "index.html.twig" %}
+{% extends "index/index.html.twig" %}
 
 {% block body %}
     <div>
     Esta tabela retorna as <strong>transações de um mês</strong> específico. Para trocar o mês, altere o <strong>ano-mes</strong> na URL desta página.
     </div>
-    {{ include('components/datatable.html.twig') }}
+    {{ include('layout/components/datatable\.html.twig') }}
 {% endblock %}
