Correção de path
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/categorias.index.html.twig
+++ b/resources/view/categorias.index.html.twig
@@ -1,5 +1,5 @@
 {% extends "layout/index.html.twig" %}
 
 {% block body %}
-    {{ include('layout/components/datatable\.html.twig') }}
+    {{ include('layout/components/datatable.html.twig') }}
 {% endblock %}
