--- a/resources/view/layout/components/datatable.html.twig
+++ b/resources/view/layout/components/datatable.html.twig
@@ -1,4 +1,4 @@
-{% extends "index.html.twig" %}
+{% extends "layout/index.html.twig" %}
 
 {% block head %}
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
