--- a/resources/view/producao.index.html.twig
+++ b/resources/view/producao.index.html.twig
@@ -4,5 +4,5 @@
     <div>
     Esta tabela retorna as <strong>produções de um mês</strong> específico. Para trocar o mês, altere o <strong>ano-mes</strong> na URL desta página.
     </div>
-    {{ include('layout/components/datatable\.html.twig') }}
+    {{ include('layout/components/datatable.html.twig') }}
 {% endblock %}
