Adição de título específico por página
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/calculos.index.html.twig
+++ b/resources/view/calculos.index.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout/index.html.twig" %}
 
+{% block title %}Calculos{% endblock title %}
+
 {% block head %}
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <style>
