--- a/resources/view/categorias.index.html.twig
+++ b/resources/view/categorias.index.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout/index.html.twig" %}
 
+{% block title %}Categorias{% endblock title %}
+
 {% block body %}
     {{ include('layout/components/datatable.html.twig') }}
 {% endblock %}
