--- a/resources/view/index.index.html.twig
+++ b/resources/view/index.index.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout/index.html.twig" %}
 
+{% block title %}Home{% endblock title %}
+
 {% block body %}
     <ul>
     {% for page in pages %}
