--- a/resources/view/invoices.index.html.twig
+++ b/resources/view/invoices.index.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout/index.html.twig" %}
 
+{% block title %}Invoices{% endblock title %}
+
 {% block body %}
     <div>
     Esta tabela retorna as <strong>transações de um mês</strong> específico. Para trocar o mês, altere o <strong>ano-mes</strong> na URL desta página.
