--- a/resources/view/layout/index.html.twig
+++ b/resources/view/layout/index.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Report</title>
+        <title>{% block title %}Report{% endblock %}</title>
         <link rel="icon" href="/img/favico.ico">
         {% block head %}{% endblock %}
     </head>
