jQuery movido para o layout
Possibilitar utilizar jQuery em qualquer página

Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/layout/index.html.twig
+++ b/resources/view/layout/index.html.twig
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}Report{% endblock %}</title>
         <link rel="icon" href="/img/favico.ico">
+        <script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-3.7.0.js"></script>
         {% block head %}{% endblock %}
     </head>
     <body>
