--- a/resources/view/layout/components/datatable.html.twig
+++ b/resources/view/layout/components/datatable.html.twig
@@ -13,6 +13,7 @@
     {% if not filterColumns %}
         {% set filterColumns = ['metadata'] %}
     {% endif %}
+    <div id="erros"></div>
     <table id="example"><tfoot><tr></tr></tfoot></table>
     <script>
     $(document).ready( function () {
@@ -33,6 +34,12 @@
         $.ajax({
             url: '{{ url|raw }}',
             success: function (data) {
+                if (data?.error?.length > 0) {
+                    for(var i=0;i<data.error.length;i++) {
+                        $('erros').append(data.error[i])
+                    }
+                    return;
+                }
                 var columns = [];
                 columnNames = Object.keys(data.data[0]);
                 for (var i in columnNames) {
