Adição de novo tipo de erro
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/acoes/make_producao.html.twig
+++ b/resources/view/acoes/make_producao.html.twig
@@ -80,6 +80,9 @@
             eventSource.addEventListener('alert', e => {
                 $('#messages').append(ItemMessage(e.type, JSON.parse(e.data)))
             })
+            eventSource.addEventListener('warning', e => {
+                $('#messages').append(ItemMessage(e.type, JSON.parse(e.data)))
+            })
             eventSource.addEventListener('done', e => {
                 $('#messages').append(ItemMessage('success', JSON.parse(e.data)))
                 eventSource.close()
