É importante limpar o componente antes de iniciar a execução do comando
Quando o formulário é sbmetido mais de uma vez, é preciso limpar a
execução anterior

Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/acoes/make_producao.html.twig
+++ b/resources/view/acoes/make_producao.html.twig
@@ -71,6 +71,8 @@
 
             const ItemMessage = (type, data) => '<div class="alert ' + type + '">' + '<span class="closebtn">&times;</span>' + data + '</div>';
 
+            $('#messages').html('')
+
             const eventSource = new EventSource(
                 '{{ url|raw }}?' + $('#form-gera-producao').serialize()
             )
