Correção de variável
Neste contexto não é mais this mas sim outra variável

Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/layout/components/datatable.html.twig
+++ b/resources/view/layout/components/datatable.html.twig
@@ -171,7 +171,7 @@
                                 input.addEventListener('keyup', () => {
                                     window.history.pushState({}, "", linkify.link())
 
-                                    if (column.search() !== this.value) {
+                                    if (column.search() !== input.value) {
                                         column.search(input.value).draw()
                                     }
                                 })
