chore: store weight
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/acoes/make_producao.html.twig
+++ b/resources/view/acoes/make_producao.html.twig
@@ -61,6 +61,10 @@
             <input type="radio" id="atualiza_producao_nao" name="atualiza_producao" value="0"{% if atualiza_producao == 0 %} checked{% endif %} /><label for="atualiza_producao_nao">Não</label>
             <input type="radio" id="atualiza_producao_sim" name="atualiza_producao" value="1"{% if atualiza_producao == 1 %} checked{% endif %} /><label for="atualiza_producao_sim">Sim</label>
         </fieldset>
+        <fieldset>
+            <legend>Tabela de pesos</legend>
+            <textarea name="pesos"></textarea>
+        </fieldset>
         <br />
         <input type="submit" value="Executa" id="submit" />
     </form>
