--- a/resources/view/trabalhadoSummarized.index.html.twig
+++ b/resources/view/trabalhadoSummarized.index.html.twig
@@ -1,10 +1,8 @@
 {% extends "layout/index.html.twig" %}
 
-{% block title %}Capital Social - analítico{% endblock title %}
+{% block title %}Trabalhado por cooperado{% endblock title %}
 
 {% block body %}
-
-Os itens desta lista vem de transações ou faturas com categoria "<b>Cliente > Interno > Cooperado > Capital Social</b>" ou itens de fatura do tipo "<b>Capital social</b>"
 
     {{ include('layout/components/datatable.html.twig') }}
 {% endblock %}
