fix: page title
Signed-off-by: Vitor Mattos <vitor@php.rio>

--- a/resources/view/acoes/make_producao.html.twig
+++ b/resources/view/acoes/make_producao.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout/index.html.twig" %}
 
-{% block title %}Zerar banco local{% endblock title %}
+{% block title %}Processar produção{% endblock title %}
 
 {% block head %}
     <script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-3.7.0.js"></script>
